# tva-meta

./: README.md  pyproject.toml
.github/workflows/: iteration_sync.yml  sync_iteration_values_in_issues.yml  sync_iterations_ref.yml  sync_labels.yml  sync_milestones.yml  sync_parent_esdis_ref.yml  sync_project_attributes.yml
src/sync_projects/: common.py  propagate_esdis_ref.py  sync_attributes.py  sync_iterations.py
